<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_dark">

    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="270dp"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/TitleAl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:text="@string/TitleAlert"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textVod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TitleAl"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/textAf"
            android:textColor="@color/grey_light"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textVod"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:hint="@string/hint_log"
            android:inputType="text"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="60dp"
            android:hint="@string/hint_pas"
            android:textColor="@color/white"
            android:inputType="textPassword"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:background="@color/qw"
            android:text="@string/cancel"
            android:textColor="@color/teal_200"
            android:textSize="15sp" />

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/cancel"
            android:background="@color/qw"
            android:text="@string/add"
            android:textColor="@color/teal_200"
            android:textSize="15sp" />


    </RelativeLayout>

</RelativeLayout>