<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainRel"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/name_bankRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <ImageView
            android:id="@+id/imgName"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:src="@drawable/museum" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_toEndOf="@+id/imgName"
            android:text="@string/name_bank"
            android:textColor="@color/myPurple"
            android:textSize="30sp"
            android:textStyle="italic" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/BranchRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name_bankRel"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/butBranch"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bg_but_white"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp" />

        <ImageView
            android:id="@+id/kluch"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:src="@drawable/klych" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/name_branches"
            android:textColor="@color/black"
            android:textSize="22sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/CourseRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/BranchRel"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/butCourse"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bg_but_white"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/imgCourse"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/dollar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_toEndOf="@+id/imgCourse"
            android:text="@string/name_course"
            android:textColor="@color/black"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="20dp" />

        <TextView
            android:id="@+id/USD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCourse"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="15dp"
            android:text="@string/USD"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textUsd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="80dp"
            android:layout_toEndOf="@id/USD" />

        <TextView
            android:id="@+id/EUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="5dp"
            android:layout_toStartOf="@+id/textEur"
            android:text="@string/EUR"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textEur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="40dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/ComeRel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CourseRel"
        android:layout_marginTop="30dp">

        <ImageButton
            android:id="@+id/butCome"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/bg_but_blue"
            android:layout_centerInParent="true"
            android:layout_marginStart="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/name_come"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </RelativeLayout>


</RelativeLayout>